--- a/LandingPage/src/assets/styles/search.css
+++ b/LandingPage/src/assets/styles/search.css
@@ -340,10 +340,10 @@ input[type="date"i] {
   overflow: visible;
 }
 .dropDown {
-  /* margin-top: 10px; */
+  margin-top: -343px;
   position: absolute;
-  margin-bottom: 640px;
-  margin-right: 820px;
+  margin-left: -38px;
+  position: absolute;
 }
 
 /* Body design of the page */
@@ -535,7 +535,7 @@ input[type="date"i] {
 .placeholder-font {
   color: #6f787f;
   text-align: left;
-  line-height: 24px;
+  line-height: 32px;
   font-family: "Inter", sans-serif;
   /* margin-bottom: 8px; */
   font-size: 20px;
@@ -546,7 +546,7 @@ input[type="date"i] {
 .inputPlaceholder {
   background-color: rgb(255, 255, 255);
   position: absolute;
-  top: 479px;
+  top: 285px;
   width: 129px;
   padding: 4px 0px;
   pointer-events: none;
@@ -565,12 +565,12 @@ input[type="date"i] {
   .dropDown {
     /* margin-top: 10px; */
     position: absolute;
-    margin-top: 585px;
-    margin-left: 453px;
+    margin-top: 20px;
+    margin-left: -7px;
   }
 
   .search-bar-dropdown {
-    width: 326px;
+    max-height: 326px;
     /* height: 264px; */
     position: absolute;
     z-index: 2;
@@ -755,7 +755,7 @@ input[type="date"i] {
   .placeholder-font {
     color: #6f787f;
     text-align: left;
-    line-height: 24px;
+    line-height: 32px;
     font-family: "Inter", sans-serif;
     /* margin-bottom: 8px; */
     font-size: 20px;
@@ -764,7 +764,7 @@ input[type="date"i] {
     width: 136px;
   }
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   input {
     border: none;
     height: 24px;
@@ -784,20 +784,30 @@ input[type="date"i] {
     color: #6f787f;
     text-align: left;
     line-height: 24px;
-    font-family: "Inter", sans-serif;
+    font-family: "Inter";
     /* margin-bottom: 8px; */
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     font-style: normal;
     width: 130px;
+  }
+  .inputSize {
+    width: 100%;
+    color: var(--content-main-default-placeholder, #6f787f);
+    /* Text/T400/Desktop/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 160% */
   }
 }
 @media only screen and (max-width: 479px) {
   /* New Search Dropdown */
   .dropDown {
     position: absolute;
-    margin-top: 593px;
-    margin-left: 487px;
+    margin-top: 20px;
+    margin-left: -22px;
   }
 
   .search-bar-dropdown {
@@ -858,9 +868,9 @@ input[type="date"i] {
     color: var(--content-main-default-placeholder, #6f787f);
     /* Text/T400/Desktop/Regular */
     font-family: Inter;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 32px; /* 160% */
+    line-height: 24px; /* 160% */
   }
 }
