--- a/LandingPage/src/assets/styles/search.css
+++ b/LandingPage/src/assets/styles/search.css
@@ -4,13 +4,29 @@
   padding: 0px;
   /* font-family: "Inter", sans-serif; */
 }
+.card-skeleton {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+  gap: 4px;
+  justify-content: space-between;
+}
+.card-skeleton .left-col {
+  flex: 0.75;
+}
+.right-col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 input {
   border: none;
   height: 24px;
   font-size: 16px;
   width: 100%;
   overflow: hidden;
-  cursor: pointer;
+  cursor: auto;
 }
 textarea:focus,
 input:focus {
@@ -220,13 +236,12 @@ input[type="date"i] {
   height: 16.5rem;
   position: absolute;
   z-index: 2;
-  overflow-y: auto;
 }
 
 .dropdown {
   background: var(--background-main-default-default, #ffffff);
   border-radius: 16px;
-  padding: 4px;
+  /* padding: 4px; */
   display: flex;
   flex-direction: column;
   gap: 0px;
@@ -241,7 +256,7 @@ input[type="date"i] {
     0px 0.5px 1px 0px rgba(12, 34, 45, 0.09),
     inset 0px 0px 0px 1px rgba(12, 34, 45, 0.09)
   );
-  overflow: hidden;
+  overflow-y: auto;
 }
 .frame {
   display: flex;
@@ -252,7 +267,7 @@ input[type="date"i] {
   align-self: stretch;
   flex: 1;
   position: relative;
-  overflow-y: auto;
+  padding: 4px;
 }
 .list-item {
   padding: 12px 16px 12px 16px;
@@ -283,6 +298,15 @@ input[type="date"i] {
   content: url("https://uploads-ssl.webflow.com/645a6f68de0f1a36cccdbead/64b5763404f2fbab0d8ec588_hoverLocation.svg");
 }
 
+/* .hotel-icon {
+  background-image: url("https://uploads-ssl.webflow.com/645a6f68de0f1a36cccdbead/64bfab922cc46c71a5af0e74_hotel.svg");
+}
+.hotel-icon:hover img {
+  visibility: hidden;
+}
+.hotel-icon:hover {
+  background-image: url("https://uploads-ssl.webflow.com/645a6f68de0f1a36cccdbead/64bfa84977234d4b48e1eff0_hotelHover.svg");
+}  */
 .list-item::before {
   content: "";
   position: absolute;
@@ -546,7 +570,7 @@ input[type="date"i] {
 .inputPlaceholder {
   background-color: rgb(255, 255, 255);
   position: absolute;
-  top: 285px;
+  top: 417px;
   width: 129px;
   padding: 4px 0px;
   pointer-events: none;
@@ -585,7 +609,6 @@ input[type="date"i] {
     align-self: stretch;
     flex: 1;
     position: relative;
-    overflow-y: auto;
   }
   .list-item::before {
     content: "";
@@ -771,7 +794,7 @@ input[type="date"i] {
     font-size: 16px;
     width: 100%;
     overflow: hidden;
-    cursor: pointer;
+    cursor: auto;
   }
   textarea:focus,
   input:focus {
