--- a/LandingPage/src/assets/styles/search.css
+++ b/LandingPage/src/assets/styles/search.css
@@ -282,7 +282,7 @@ input[type="date"i] {
   overflow: hidden;
   transition: height 0.15s ease-out, width 0.15s ease-out,
     background-color 0.15s ease-out;
-  background-color: transparent;
+  /* background-color: transparent; */
   border-radius: 12px;
 }
 .active {
@@ -315,7 +315,7 @@ input[type="date"i] {
   width: 100%;
   height: 100%;
   background: #ffffff; /* hover background color */
-  transition: background 0.2s ease-out;
+  /* transition: background 0.2s ease-out; */
 }
 
 .list-item:hover::before {
@@ -548,14 +548,23 @@ input[type="date"i] {
 }
 .inputSize {
   width: 100%;
-  color: var(--content-main-default-placeholder, #6f787f);
+  color: var(--content-main-default-text, #363d42);
   /* Text/T400/Desktop/Regular */
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 32px; /* 160% */
 }
+.inputSize::placeholder {
+  font-family: Inter, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 160% */
+  color: var(--content-main-default-placeholder, #6f787f);
+}
+
 .placeholder-font {
   color: #6f787f;
   text-align: left;
@@ -583,7 +592,14 @@ input[type="date"i] {
   font-style: normal;
   z-index: 1;
 }
-
+.mobilePlceHolder {
+  font-family: "Inter", sans-serif;
+  color: #6f787f;
+  line-height: 24px;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+}
 @media only screen and (max-width: 991px) {
   /* Search bar dropdown */
   .dropDown {
@@ -618,7 +634,7 @@ input[type="date"i] {
     width: 100%;
     height: 100%;
     background: #ffffff; /* hover background color */
-    transition: background 0.2s ease-out;
+    /* transition: background 0.2s ease-out; */
   }
 
   .list-item:hover::before {
@@ -765,16 +781,24 @@ input[type="date"i] {
   .search_body-tablet.homepage {
     height: 152px;
   }
-  .inputSize {
-    width: 100%;
-    color: var(--content-main-default-placeholder, #6f787f);
-    /* Text/T400/Desktop/Regular */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 32px; /* 160% */
-  }
+.inputSize {
+  width: 100%;
+  color: var(--content-main-default-text, #363d42);
+  /* Text/T400/Desktop/Regular */
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 160% */
+}
+.inputSize::placeholder {
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 160% */
+  color: var(--content-main-default-placeholder, #6f787f);
+}
   .placeholder-font {
     color: #6f787f;
     text-align: left;
@@ -830,7 +854,7 @@ input[type="date"i] {
   .dropDown {
     position: absolute;
     margin-top: 20px;
-    margin-left: -22px;
+    margin-left: 0px;
   }
 
   .search-bar-dropdown {
