--- a/LandingPage/src/assets/styles/search.css
+++ b/LandingPage/src/assets/styles/search.css
@@ -9,7 +9,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.search_container.focused {
+  padding-bottom: 50px;
+}
 .card-skeleton {
   display: flex;
   width: 100%;
