--- a/LandingPage/src/assets/styles/search.css
+++ b/LandingPage/src/assets/styles/search.css
@@ -47,6 +47,11 @@ input:focus {
   height: 100vh;
   width: 100vw;
 }
+.react-datepicker__day--outside-month {
+  color: transparent !important;
+  pointer-events: none !important;
+  visibility: hidden;
+}
 /* react patepicker  */
 .react-datepicker__month-container {
   height: 300px;
